<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="4">

        <ToggleButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_3"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <ToggleButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:checked="false"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_1"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <ToggleButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_2"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <ToggleButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_5"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <ToggleButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_6"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ToggleButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_7"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button11"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <ToggleButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_8"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <ToggleButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_9"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button13"
            app:layout_constraintEnd_toStartOf="@+id/button10"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <ToggleButton
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_10"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button14"
            app:layout_constraintEnd_toStartOf="@+id/button11"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <ToggleButton
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_11"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button15"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <ToggleButton
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_12"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <ToggleButton
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_13"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <ToggleButton
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_14"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button15"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <ToggleButton
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_15"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button16"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <ToggleButton
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_16"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <ToggleButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="#000000"
            android:textColor="#2BE131"
            android:textOff=""
            android:textOn="@string/button_4"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
                android:id="@+id/button17"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="60dp"
                android:onClick="button_17_onClick"
                android:text="@string/button_17"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button16"
                app:layout_constraintVertical_bias="0.362" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="175dp"
            android:layout_height="181dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/idea"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintHorizontal_bias="0.747"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button13"
            app:layout_constraintVertical_bias="0.119" />

</android.support.constraint.ConstraintLayout>